Error msg in japanese

--- a/src/main/resources/templates/students/student-update.html
+++ b/src/main/resources/templates/students/student-update.html
@@ -97,7 +97,7 @@
             <div class="tab-pane fade show active" id="basic" role="tabpanel" aria-labelledby="basic-tab">
               <div class="card shadow-sm border-0">
                 <div class="card-body">
-                  <form th:action="@{/students/update-basic/{id}(id=${student.id})}" th:object="${student}" method="post" id="basicForm">
+                  <form th:action="@{/students/update-basic/{id}(id=${student.id})}" th:object="${student}" method="post" id="basicForm" novalidate>
                     <div class="form-section">
                       
                       <div class="row g-3"> 
@@ -222,7 +222,7 @@
             <div class="tab-pane fade" id="status" role="tabpanel" aria-labelledby="status-tab">
               <div class="card shadow-sm border-0">
                 <div class="card-body">
-                  <form th:action="@{/students/update-status/{id}(id=${student.id})}" th:object="${student}" method="post" id="statusForm">
+                  <form th:action="@{/students/update-status/{id}(id=${student.id})}" th:object="${student}" method="post" id="statusForm" novalidate>
                     <div class="form-section">
                       <div class="row g-3">
                         
@@ -411,7 +411,7 @@
               <div class="card-body">
                 <form th:action="@{/students/update-n5/{id}(id=${student.id})}" 
                     th:object="${n5Class}" method="post" id="n5Form">
-                  <input type="hidden" th:field="*{id}"/>
+                  <input type="hidden" th:field="*{id}" novalidate/>
                   
                   <div class="mb-4">
                     <h5 class="border-bottom pb-2 mb-3">
@@ -586,7 +586,7 @@
             <div class="card shadow-sm border-0">
               <div class="card-body">
                 <form th:action="@{/students/update-n4/{id}(id=${student.id})}" 
-                th:object="${n4Class}" method="post" id="n4Form">
+                th:object="${n4Class}" method="post" id="n4Form" novalidate>
                   <input type="hidden" th:if="${student.n4Class != null}" th:field="*{id}"/>
                   
                   <div class="mb-4">
@@ -763,7 +763,7 @@
             <div class="card shadow-sm border-0">
               <div class="card-body">
                 <form th:action="@{/students/update-interview/{id}(id=${student.id})}" 
-                      th:object="${interviewNotes}" method="post" id="interviewForm">
+                      th:object="${interviewNotes}" method="post" id="interviewForm" novalidate>
                   <input type="hidden" th:if="${interviewNotes != null}" th:field="*{id}"/>
                   
                   <div class="mb-4">
