--- a/src/main/resources/templates/access-denied.html
+++ b/src/main/resources/templates/access-denied.html
@@ -32,7 +32,7 @@
                 <a href="javascript:history.back()" class="btn btn-outline-secondary">
                     <i class="bi bi-arrow-left me-2"></i>Go Back
                 </a>
-                <a href="/" class="btn btn-primary">
+                <a href="/dashboard" class="btn btn-primary">
                     <i class="bi bi-house-door me-2"></i>Go to Dashboard
                 </a>
             </div>
